# secret_wiki

./: .env  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  app.py  pylint_plugin.py  pyproject.toml  test.txt  todo.txt
alembic/: env.py
alembic/versions/: 0001_baseline.py  0001_initial.py  0002_add_is_admin_only.py  0002_is_secret_replaces_is_admin_only.py  0003_section_permissions.py  0003_squash_migrations.py  0004_parent_page_ids.py
docs/: data_model.md  structurizr.dsl
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: ApiWrapper.js  App.css  App.js  common.js  index.js  store.js
frontend/src/components/: Help.js  Icons.js  LoginModal.js  Main.js  NewPageModal.js  PageContent.js  PageCreateModal.js  PageTree.js  PermissionForm.js  QuickFindBar.js  Section.js  SectionList.js  Status.js  (+5 more)
script/: bootstrap  export  export.py  exporting.py  import  migrations  porter.py  seed.py  server  server_debug.py  set-user-password  set-user-password.py  setup  shell  shell_imports.py  test  update
secret_wiki/: api.py  app.py  db.py  models.py  schemas.py  user_db.py
secret_wiki/api/: auth.py  common.py  user.py  wiki.py
secret_wiki/models/: __init__.py  auth.py  wiki.py
secret_wiki/porter/: __init__.py  common.py  exporter.py  importer.py
secret_wiki/schemas/: __init__.py  auth.py  wiki.py
secret_wiki/static/: login.js  main.js  page.js  section.js  state.js  wiki.css  wiki.js
secret_wiki/templates/: base.html  index.html  login.html
tests/resources/: factories.py  seed.yaml
tests/unit/: conftest.py
(+42 files in other folders)
