[project]
name = ""
version = "0.0.1"
requires-python = "~=3.8"
dependencies = [
    "aiofiles",
    "aiosqlite",
    "alembic",
    "fastapi",
    "fastapi-users[sqlalchemy2]<10.0",
    "fastapi-users-db-sqlalchemy==3.0.1",
    "greenlet",
    "jinja2",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
    "pytest-asyncio",
    "ruamel.yaml<0.17",
    "setuptools",
]

[tool.black]
line-length = 99

[dependency-groups]
dev = [
    "black==22.3.0",
    "httpx",
    "isort",
    "pycln",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "requests",
    "faker",
    "mypy",
    "sqlalchemy-stubs",
    "factory-boy",
]

[tool.isort]
profile = "black"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.mypy]
plugins = "sqlmypy"

[tool.pylint.master]
load-plugins = [
  "pylint_plugin",
]

[tool.pylint.basic]
good-names = [
  "db",
]

[tool.pylint.format]
max-line-length = 99

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "import-outside-toplevel",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
